@@ -718,6 +718,20 @@ description=<<EOT
 Number of trap parser threads pfsetvlan should start
 EOT
 
+[vlan.bind]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should bind be started ?
+EOT
+
+[vlan.dhcpd]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should DHCPd be started ?
+EOT
+
 [servicewatch.email]
 type=toggle
 options=enabled|disabled
