@@ -498,12 +498,23 @@ adjustswitchportvlanreasons=node_modify,manage_register,manage_deregister,manage
 #
 # Which script do we have to execute to adjust the switchport VLAN
 adjustswitchportvlanscript=flip.pl
+# 
+# vlan.bind
+#
+# Should bind be started ?
+bind=disabled
 #
 # vlan.closelocationlogonstop
 #
 # Should open locationlog entries be closed when pfsetvlan is 
 # stopped
 closelocationlogonstop=disabled
+#
+# vlan.dhcpd
+#
+# Should DHCPd be started ?
+#
+dhcpd=disabled
 #
 # vlan.nbtraphandlerthreads
 #
