@@ -1,0 +1,8 @@
+# This file is generated from a template at %%template%%
+# Any changes made to this file will be lost on restart
+
+authoritative;
+ddns-update-style none;
+ignore client-updates;
+
+%%networks%%
