@@ -45,6 +45,10 @@
           (http://www.packetfence.org/mantis/view.php?id=573)
         switchconfig get all is now nicely sorted
         added networkconfig CLI and web admin GUI
+        added support for starting and configurinr DHCPd in 
+          VLAN isolation mode
+          (http://www.packetfence.org/mantis/view.php?id=568)
+          (http://www.packetfence.org/mantis/view.php?id=570)
 
 1.8.0
         unify log management
